--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,14 @@
-body{
-    background-color: rgb(0, 255, 191);
+@use 'header';
+@use 'hero';
+@use 'ministros';
+@use 'evento';
+@use 'footer';
+@use 'ingresso';
+@use 'contagem';
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: montserrat,Sans-serif;
 }
