--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -38,6 +38,14 @@
 
             p{
                 font-size: 10px;
+                
+            }
+
+            .text--small{
+                width: 140px;
+                line-height: 22px;
+                margin: 0 auto;
+                padding-bottom: 12px;
             }
         }
     }
