--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -35,3 +35,34 @@
         }
     }
 }
+
+@media (max-width: 767px){
+    .header{
+        width: 100vw;
+        padding: 0;
+        // padding-left: 25vw;
+        padding-top: 8px;
+
+        &__navbar{
+            margin: 0 auto;
+
+            h2{
+                width: 200px;
+                font-size: 14px;
+                text-align: center;
+            }
+        }
+
+        .content{
+            &__title{
+                display: none;
+            }
+        }
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1023px){
+    .header{
+        padding: 14px 60px;
+    }
+}
