--- a/src/styles/_evento.scss
+++ b/src/styles/_evento.scss
@@ -65,7 +65,8 @@
                 text-align: center;
 
                 .row{
-        
+                    padding-left: 10px;
+
                     .description{
                         padding-left: 0;
 
@@ -127,6 +128,7 @@
                             height: 48px;
                             font-size: 18px;
                             margin-top: 22px;
+                            
                         }
                     }
                 }
