--- a/src/styles/_ingresso.scss
+++ b/src/styles/_ingresso.scss
@@ -95,7 +95,7 @@
             }
 
             .button{
-                margin-left: 32px;
+                margin-left: 8.5%;
             }
         }
     }
@@ -138,7 +138,7 @@
             }
 
             .button{
-                margin-left: 187px;
+                margin-left: 27%;
                 width: 320px;
                 height: 50px;
                 margin-top: 60px;
