--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -58,7 +58,7 @@
 
 @media (max-width: 767px){
     .hero{
-        margin-top: 7vh;
+        margin-top: 4vh;
         background-image: url("../images/hero.mobile.png");
         background-size: cover;
         height: 100vh;
@@ -85,7 +85,7 @@
 
         .button{
             margin-top: 35px;
-            margin-left: 112px;
+            margin-left: 31.5%;
             width: 40%;
             font-size: 16px;
             width: 140px;
@@ -128,7 +128,7 @@
             width: 240px;
             height: 50px;
             margin-top: 35px;
-            margin-left: 36vw;
+            margin-left: 35.5%;
             font-size: 26px;
         }
     }
